--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
   "devDependencies": {
     "jest": "^29.0.0",
     "express": "^4.18.0"
+  },
+  "jest": {
+    "testMatch": [
+      "**/tests/**/*.test.js",
+      "**/?(*.)+(spec|test).js"
+    ],
+    "testEnvironment": "node"
   }
 }
